# PayRoll-System-Project

./: README.txt  data.json  manage.py  pyproject.toml
payrollsystem/: asgi.py  settings.py  urls.py  wsgi.py
payrollsystem/static/: bootstrap.min.css
payrollsystem/templates/: base.html
services/: admin.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py
services/migrations/: 0001_initial.py  0002_alter_employee_emp_code.py  0002_alter_employee_ot_hrs.py  0002_alter_payslip_month.py  0002_payslip_year.py  0003_alter_payslip_month.py  0003_auto_20230909_2047.py
services/templates/: app.html  success.html
services/templates/services/: add_employee.html  emlist.html  home.html  payslip.html  profile.html  success.html  upload.html
