[tool.poetry]
name = "payrollsystem-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "payrollsystem_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
pillow = "^10.0.0"
django-import-export = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
